--- a/notebooks/13_parallel_jobs.qmd
+++ b/notebooks/13_parallel_jobs.qmd
@@ -123,7 +123,9 @@ eg just run it on 4 tasks and print out the command (wrap in printf for example 
 - check .e log file and how to check it re "exited with status 0" 
 
 
-### Example 2: Tom TBA
+### Example 2: Calculation of pi
 
-**Tom TBA**
+The script whatispi.py runs a simulation on estimating the number pi given a set of numbers - The higher the simulation number the closer the result should be to the true value of pi.
+
+![](../fig/calc_pi.png)
 
